# BookRecommender

./: .gitignore
backend/: all_book_data.csv  all_book_data_old.csv  completions_api.py  enriched_dataset.csv  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  @ungap.js  bail.js  character-entities.js  class-variance-authority.js  clsx.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  lucide-react.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-factory-destination.js  micromark-factory-label.js  micromark-factory-space.js  micromark-factory-title.js  micromark-factory-whitespace.js  micromark-util-character.js  micromark-util-chunked.js  micromark-util-classify-character.js  micromark-util-combine-extensions.js  micromark-util-decode-numeric-character-reference.js  micromark-util-decode-string.js  micromark-util-encode.js  (+25 more)
frontend/app/: globals.css  page.tsx
frontend/components/: BookDetailCard.tsx  FavoriteSubjectCard.tsx  TopBooksCard.tsx
(+346 files in other folders)
