[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maximillian Mahlke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
openai = "^1.58.1"



[tool.poetry.scripts]
dev = "uvicorn main:app --host 0.0.0.0 --port 5001 --reload"
start = "uvicorn main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
